@@ -1,3 +1,5 @@
+Debug=false
+APP_KEY=<app key>
 DD_HASH_APP=default
 DD_SERVICE=<Service name>
 DD_API_KEY=<Datadog API KEY>
