@@ -1,10 +1,3 @@
 honeypot-name: "default"
 port: 3000
 headers:
-# built-in-traps:
-#   enable: true
-#   list:
-#     - 1
-#     - 2
-#     - 3
-#     - 4
