@@ -1,0 +1,3 @@
+{{#links}}
+<a href="{{ link }}">{{title}}</a>
+{{/links}}
