@@ -1,1 +1,3 @@
-${rand:text}
+${faker.lorem.text}
+${faker.lorem.text}
+${faker.lorem.text}
