@@ -1,1 +1,2 @@
-${rand:text}
+${faker.lorem.text}
+${faker.lorem.text}
